syntax = "proto3";
package DomainServices.UserService;
option csharp_namespace = "DomainServices.UserService.Contracts";

message GetUserByLoginRequest {
   string Login = 1;
}

message User {
	string Login = 1;
	string CPM = 2;
	string ICP = 3;
	int32 Id = 4;
	string FullName = 5;
	string Phone = 6;
	string Email = 7;
}